@@ -9,6 +9,11 @@ For more detailed instructions on filling in the ChangeLog form, see
 ******************************************************************************
 post-release patch
 
+2001-11-14  Kevin Layer  <layer@crikey>
+
+	* fi-site-init.el: for emacs 21
+	* fi-emacs19.el: for emacs 21
+
 2001-11-13  Kevin Layer  <layer@crikey>
 
 	* fi-xemacs.el: fix for fix below
